@@ -21,8 +21,17 @@ def prep_output_file(filename):
     FileTimes[filename] = oldstats
 
 
+def check_times():
+    for filename, oldtime in FileTimes.items():
+        newstats = os.path.getmtime(filename)
+        print("New %s mtime=%d" % (filename, newstats))
+        if oldtime != newstats:
+            test.error("--skip-identical was ignored -- regenerated %s" % (filename))
+
+
 test.scenarios('vlt')
 
+test.setenv('VERILATOR_DEBUG_SKIP_HASH', "1")
 test.compile(verilator_flags2=['--stats'])
 
 print("NOTE: use --debugi, as --debug in driver turns off skip-identical")
@@ -32,13 +41,19 @@ prep_output_file(test.obj_dir + "/V" + test.name + "__stats.txt")
 
 time.sleep(2)  # Or else it might take < 1 second to compile and see no diff.
 
+print("\nTest skip without hash fallback")
 test.setenv('VERILATOR_DEBUG_SKIP_IDENTICAL', "1")
+test.setenv('VERILATOR_DEBUG_SKIP_HASH', "1")
 test.compile(verilator_flags2=['--stats'])
+check_times()
 
-for filename, oldtime in FileTimes.items():
-    newstats = os.path.getmtime(filename)
-    print("New %s mtime=%d" % (filename, newstats))
-    if oldtime != newstats:
-        test.error("--skip-identical was ignored -- regenerated %s" % (filename))
+time.sleep(2)  # Or else it might take < 1 second to compile and see no diff.
+
+print("\nTest skip with hash fallback")
+os.utime(test.top_filename, None)
+test.setenv('VERILATOR_DEBUG_SKIP_IDENTICAL', "1")
+test.setenv('VERILATOR_DEBUG_SKIP_HASH', "")
+test.compile(verilator_flags2=['--stats'])
+check_times()
 
 test.passes()
